--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-opencv-python-headless==4.7.0.72
-deepface==0.0.79
-streamlit==1.24.0
-numpy==1.24.4
-Pillow==10.0.0
+opencv-python-headless
+deepface
+streamlit
+numpy
+Pillow
