--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit
-deepface
-opencv-python-headless
-numpy
-Pillow
-tensorflow
+streamlit>=1.32.0
+deepface>=0.0.79
+opencv-python-headless>=4.5.0
+Pillow>=10.0.0
+numpy>=1.21.0
