--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-deepface
-pandas
-numpy
-opencv-python-headless
-google-colab  # If you rely on Google Drive mounting
+streamlit==1.32.0
+deepface==0.0.83
+numpy==1.26.4
+pandas==2.2.1
+opencv-python-headless==4.9.0.80
+google-colab
