--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.32.0
-deepface==0.0.83
-numpy==1.26.4
-pandas==2.2.1
-opencv-python-headless==4.9.0.80
+streamlit==1.28.0
+deepface==0.0.79
+opencv-python-headless==4.7.0.72  # Headless version for server environments
+pandas==2.0.3
+numpy==1.24.3
+Pillow==10.0.0
