--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit==1.28.0
-deepface==0.0.79
-opencv-python-headless==4.7.0.72  # Headless version for server environments
-pandas==2.0.3
-numpy==1.24.3
-Pillow==10.0.0
+deepface
+streamlit
+opencv-python-headless
+keras==2.15.0
+tensorflow==2.15.0
